// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "57",
  },
  {
    "p": "korean.bbc_korean_radio.liveradio.page",
  },
  {
    "x1": "[urn:bbc:ares:ws_media:live:bbc_korean_radio]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-korean]",
  },
  {
    "x4": "[ko]",
  },
  {
    "x7": "[player-live]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20코리아%20라디오%20-%20BBC%20News%20코리아]",
  },
]
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "이용 약관",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "BBC 소개",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "개인정보취급방침",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "쿠키정책",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "고객센터",
  "url": "https://www.bbc.co.uk/korean/send/u50853423",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 8`] = `
{
  "text": "다른 언어로 보기",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 9`] = `
{
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`Canonical Korean Live Radio Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`Canonical Korean Live Radio Page Header I can see the branding 1`] = `"BBC News, 코리아"`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "비디오",
  "url": "/korean/topics/cnwng7v0e54t",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "라디오",
  "url": "/korean/bbc_korean_radio/programmes/w13xttll",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "TOP 뉴스",
  "url": "/korean/popular/read",
}
`;

exports[`Canonical Korean Live Radio Page Main heading should match text 1`] = `"BBC 코리아 라디오"`;

exports[`Canonical Korean Live Radio Page Media Loader renders a valid container 1`] = `
<figure
  class="bbc-ucozvf"
  data-e2e="media-loader__container"
>
  <div
    class="bbc-1eq7znh"
    data-e2e="media-player"
  >
    <noscript>
      &lt;div&gt;&lt;div class="bbc-i4t8f7"&gt;&lt;strong class="bbc-pow7hy"&gt;사용 기기에서 미디어 재생이 지원되지 않습니다&lt;/strong&gt;&lt;/div&gt;&lt;/div&gt;
    </noscript>
  </div>
</figure>
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/korean/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Korean Live Radio Page SEO Heading level 1 1`] = `"BBC 코리아 라디오"`;

exports[`Canonical Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`Canonical Korean Live Radio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/korean.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ko",
        "name": "Korean",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
        "@type": "WebPage",
        "name": "BBC 코리아 라디오",
      },
      "url": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
    },
  ],
}
`;

exports[`Canonical Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`Canonical Korean Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`Canonical Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`Canonical Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`Canonical Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Page title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`Canonical Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page Summary should match text 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;
